--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@color/blue"
+    android:background="@color/material_blue_grey_900"
     tools:context="pt.challenge_it.android.flag.millionaire.activity.MainActivity">
 
     <TextView android:text="@string/title"
@@ -23,20 +23,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center|bottom"
+        android:gravity="center|center_vertical"
+
         android:orientation="vertical" >
         <Button
             android:id="@+id/btnNewGame"
             android:layout_width="145dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center"
+            android:textColor="@color/white"
+
             android:text="@string/txtNewGame" />
 
         <Button
             android:id="@+id/btnSettings"
             android:layout_width="145dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center"
+            android:textColor="@color/white"
             android:text="@string/txtSettings" />
     </LinearLayout>
 </LinearLayout>
