--- a/app/src/main/res/layout/activity_millionaire.xml
+++ b/app/src/main/res/layout/activity_millionaire.xml
@@ -6,35 +6,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="android.flag.pt.challenge_it.millionaire.MillionaireActivity"
-    android:orientation="vertical">
+    android:background="@color/material_blue_grey_900"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+
+        android:layout_weight="0.09">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cinco_cinco"
+            android:layout_marginRight="30dp"
             android:id="@+id/btnCinco"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/publico"
+            android:layout_marginRight="30dp"
             android:id="@+id/btnPublico"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="@string/telefone"
             android:id="@+id/btnTelefone"/>
     </LinearLayout>
+
+
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/abc_text_size_title_material"
+        android:textColor="@color/white"
+        android:paddingBottom="30dp"
         android:id="@+id/txtQuestion"/>
 
 
