--- a/app/src/main/res/layout/activity_publico.xml
+++ b/app/src/main/res/layout/activity_publico.xml
@@ -1,21 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:background="@color/blue"
-    tools:context="pt.challenge_it.android.flag.millionaire.activity.CincoActivity">
+    android:background="@color/material_blue_grey_900"
+    tools:context="pt.challenge_it.android.flag.millionaire.activity.PublicoActivity"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="@dimen/abc_text_size_title_material"
         android:textColor="@color/white"
-        android:id="@+id/txtCinco"/>
+        android:id="@+id/txtPublico"
+        android:paddingBottom="20dp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -24,4 +23,5 @@
         android:background="@color/background_material_dark"
         android:textColor="@color/white"
         android:id="@+id/btnOk"/>
+
 </LinearLayout>
