--- a/app/src/main/res/layout/activity_publico.xml
+++ b/app/src/main/res/layout/activity_publico.xml
@@ -19,7 +19,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OK"
+        android:text="@string/ok"
         android:background="@color/background_material_dark"
         android:textColor="@color/white"
         android:id="@+id/btnOk"/>
