--- a/app/src/main/res/layout/activity_millionaire.xml
+++ b/app/src/main/res/layout/activity_millionaire.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:text="@string/cinco_cinco"
             android:layout_marginRight="30dp"
+            android:textColor="@color/white"
             android:id="@+id/btnCinco"/>
 
         <Button
@@ -28,12 +29,13 @@
             android:layout_height="wrap_content"
             android:text="@string/publico"
             android:layout_marginRight="30dp"
+            android:textColor="@color/white"
             android:id="@+id/btnPublico"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textColor="@color/white"
             android:text="@string/telefone"
             android:id="@+id/btnTelefone"/>
     </LinearLayout>
@@ -53,10 +55,12 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:id="@+id/btnAnswerA"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:id="@+id/btnAnswerB"/>
 
 
@@ -64,10 +68,12 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:id="@+id/btnAnswerC"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:id="@+id/btnAnswerD"/>
 
 
